--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!doctype html>
 <html lang="it">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Idoneo</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Idoneo - La piattaforma per i tuoi concorsi" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  </head>
-  <body>
-    <!-- Contenitore React -->
-    <div id="root"></div>
+<head>
+  <meta charset="UTF-8" />
+  <title>Idoneo</title>
 
-    <!-- ENTRYPOINT LOCALE: parte da index.tsx -->
-    <script type="module" src="/index.tsx"></script>
-  </body>
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <meta name="description" content="Idoneo - La piattaforma per i tuoi concorsi" />
+
+  <!-- PWA Meta Tags -->
+  <meta name="theme-color" content="#00B1FF" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="Idoneo" />
+
+  <!-- Icons -->
+  <link rel="icon" type="image/png" href="/icon-192x192.png" />
+  <link rel="apple-touch-icon" sizes="512x512" href="/icon-512x512.png" />
+  <link rel="apple-touch-icon" sizes="192x192" href="/icon-192x192.png" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <!-- Contenitore React -->
+  <div id="root"></div>
+
+  <!-- ENTRYPOINT LOCALE: parte da index.tsx -->
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
