--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <!-- PWA Meta Tags -->
   <meta name="theme-color" content="#00B1FF" />
+  <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="apple-mobile-web-app-title" content="Idoneo" />
