--- a/index.html
+++ b/index.html
@@ -3,11 +3,37 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Idoneo</title>
+  <title>Idoneo - Preparati ai Concorsi Pubblici | Quiz e Simulazioni</title>
 
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-  <meta name="description" content="Idoneo - La piattaforma per i tuoi concorsi" />
+  <meta name="description"
+    content="Idoneo è la piattaforma n°1 per prepararti ai concorsi pubblici. Quiz, simulazioni e statistiche per Polizia, Carabinieri, Forze Armate e molto altro." />
+  <meta name="keywords"
+    content="concorsi pubblici, quiz polizia, simulazione carabinieri, esame guardia di finanza, test forze armate, preparazione concorsi" />
+  <meta name="author" content="Idoneo" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://idoneo.ai/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://idoneo.ai/" />
+  <meta property="og:title" content="Idoneo - Preparati ai Concorsi Pubblici" />
+  <meta property="og:description"
+    content="Quiz, simulazioni e statistiche per prepararti ai concorsi di Polizia, Carabinieri, Forze Armate e molto altro." />
+  <meta property="og:image" content="https://idoneo.ai/icon-512x512.png" />
+  <meta property="og:locale" content="it_IT" />
+  <meta property="og:site_name" content="Idoneo" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://idoneo.ai/" />
+  <meta name="twitter:title" content="Idoneo - Preparati ai Concorsi Pubblici" />
+  <meta name="twitter:description"
+    content="Quiz, simulazioni e statistiche per prepararti ai concorsi di Polizia, Carabinieri, Forze Armate e molto altro." />
+  <meta name="twitter:image" content="https://idoneo.ai/icon-512x512.png" />
 
   <!-- PWA Meta Tags -->
   <meta name="theme-color" content="#00B1FF" />
@@ -20,6 +46,32 @@
   <link rel="icon" type="image/png" href="/icon-192x192.png" />
   <link rel="apple-touch-icon" sizes="512x512" href="/icon-512x512.png" />
   <link rel="apple-touch-icon" sizes="192x192" href="/icon-192x192.png" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Idoneo",
+    "url": "https://idoneo.ai",
+    "description": "Piattaforma per la preparazione ai concorsi pubblici con quiz e simulazioni",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://idoneo.ai/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Idoneo",
+    "url": "https://idoneo.ai",
+    "logo": "https://idoneo.ai/icon-512x512.png",
+    "sameAs": []
+  }
+  </script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
