--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   <meta name="twitter:image" content="https://idoneo.ai/icon-512x512.png" />
 
   <!-- PWA Meta Tags -->
-  <meta name="theme-color" content="#00B1FF" />
+  <meta name="theme-color" content="#0F172A" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Idoneo" />
 
   <!-- Icons -->
@@ -79,6 +79,50 @@
 </head>
 
 <body>
+  <!-- iOS Overscroll Prevention (allows horizontal swipes) -->
+  <script>
+    (function () {
+      var startX = 0;
+      var startY = 0;
+
+      document.addEventListener('touchstart', function (e) {
+        startX = e.touches[0].clientX;
+        startY = e.touches[0].clientY;
+      }, { passive: true });
+
+      document.addEventListener('touchmove', function (e) {
+        var root = document.getElementById('root');
+        if (!root) return;
+
+        var currentX = e.touches[0].clientX;
+        var currentY = e.touches[0].clientY;
+        var deltaX = Math.abs(currentX - startX);
+        var deltaY = Math.abs(currentY - startY);
+
+        // If this is primarily a HORIZONTAL swipe, allow it completely
+        if (deltaX > deltaY) {
+          return; // Let horizontal swipes through
+        }
+
+        // For VERTICAL swipes, prevent overscroll at edges
+        var scrollTop = root.scrollTop;
+        var scrollHeight = root.scrollHeight;
+        var clientHeight = root.clientHeight;
+        var isScrollingUp = currentY > startY;
+        var isScrollingDown = currentY < startY;
+
+        // Prevent overscroll at top (trying to scroll up when already at top)
+        if (scrollTop <= 0 && isScrollingUp) {
+          e.preventDefault();
+        }
+        // Prevent overscroll at bottom (trying to scroll down when already at bottom)
+        if (scrollTop + clientHeight >= scrollHeight - 1 && isScrollingDown) {
+          e.preventDefault();
+        }
+      }, { passive: false });
+    })();
+  </script>
+
   <!-- Contenitore React -->
   <div id="root"></div>
 
